💬 Adicionando meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="theme-color" content="#1C1C1C">
+
+    <title>Next Movie</title>
+    <meta name="title" content="Next Movie">
+    <meta name="description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Next Movie">
+    <meta property="og:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
+    <meta property="og:image" content="src/assets/cover.jpg">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Next Movie">
+    <meta property="twitter:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
+    <meta property="twitter:image" content="src/assets/cover.jpg">
   </head>
   <body>
     <div id="root"></div>
