--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Next Movie">
     <meta property="og:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
-    <meta property="og:image" content="src/assets/cover.jpg">
+    <meta property="og:image" content="src/assets/cover.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Next Movie">
     <meta property="twitter:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
-    <meta property="twitter:image" content="src/assets/cover.jpg">
+    <meta property="twitter:image" content="src/assets/cover.png">
   </head>
   <body>
     <div id="root"></div>
