🚸 Adicionando meta tag de imagem

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <meta property="og:url" content="https://the-next-movie.vercel.app">
     <meta property="og:title" content="Next Movie">
     <meta property="og:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
-    <meta property="og:image" content="https://the-next-movie.vercel.app/assets/cover.954a7495.png">
+    <meta property="og:image" content="https://the-next-movie.vercel.app/cover.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://the-next-movie.vercel.app">
     <meta property="twitter:title" content="Next Movie">
     <meta property="twitter:description" content="Confira as notas dos filmes, pesquise e encontre o próximo filme para assistir!">
-    <meta property="twitter:image" content="https://the-next-movie.vercel.app/assets/cover.954a7495.png">
+    <meta property="twitter:image" content="https://the-next-movie.vercel.app/cover.png">
   </head>
   <body>
     <div id="root"></div>
